User refactoring, user and wildfire tests done

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,7 +10,7 @@
                         <div class="column is-one-third">
                             <strong>Phone:</strong> 
                             <div class="control has-icons-left has-icons-right">
-                                <%= f.telephone_field :phone, class: "input", placeholder: '+12025550189', autofocus: true %>
+                                <%= f.telephone_field :phone, class: "input", placeholder: '(202)-555-0189', autofocus: true %>
                                 <span class="icon is-left">
                                     <i class="fas fa-phone"></i>
                                 </span>
