--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,7 +55,7 @@
 
 .activate-modal:hover {
   cursor: pointer;
-  color: rgba(255, 255, 255, 0.3);
+  color: hsl(141, 71%, 48%) !important;
 }
 
 .dark-orange {
