--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,10 @@ body {
   color: hsl(141, 71%, 48%) !important;
 }
 
+.activate-modal {
+  font-size: 1.2rem;
+}
+
 .dark-orange {
   background-color: rgb(252,116,28);
   color: white;
@@ -69,7 +73,7 @@ body {
 }
 
 .card-header {
-  box-shadow: 0px 5px 5px grey;
+  border-bottom: 1px solid grey;
 }
 
 .card-header-title {
