Removed unnecessary comment and using local css instead of cdn

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <!-- note to self: rtfm -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css' %>
+    <%= stylesheet_link_tag 'bulma.min', media: 'all', 'data-turbolinks-track': 'reload'%>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag "https://kit.fontawesome.com/0b8b9f35bf.js", crossorigin: "anonymous" %>
