--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@ body {
       rgba(0, 0, 0, 0.2)
       ),
       /* bottom, image */
-      url('burning_bg.png') center center;
+      url('~images/burning_bg.png') center center;
     background-size: cover;
 }
 
