modifying image url to link to precompiled asset

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,8 @@ body {
       rgba(0, 0, 0, 0.2)
       ),
       /* bottom, image */
-      url('~images/burning_bg.png') center center;
+      /* https://medium.com/@yoanante/assets-webpacker-and-rails-6-why-your-images-and-css-arent-showing-up-heroku-vs-development-de85047148de */
+      image-url('burning_bg.png') center center;
     background-size: cover;
 }
 
