Testing if webp background image loads in firefox

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ body {
       ),
       /* bottom, image */
       /* https://medium.com/@yoanante/assets-webpacker-and-rails-6-why-your-images-and-css-arent-showing-up-heroku-vs-development-de85047148de */
-      image-url('burning_bg.png') center center;
+      image-url('burning_bg.webp') center center;
     background-size: cover;
 }
 
