Updated privacy policy

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -87,10 +87,10 @@
                             </ul>
                         <h4>Privacy Policy</h4>
                             <p>
-                                This app collects user phone numbers and zip codes and stores them in a database in order to send texts for nearby fires. This data will never be shared with 
-                                anyone. To request that your information be removed from the database, reply STOP to the number that you receive texts from. Any updates about the Privacy Policy
-                                will be sent via text to users of the application. This policy is effective as of October 26, 2020. This website will not change its behavior when it receives a
-                                'Do Not Track' signal from a user's browser, mainly because it does not have any tracking. No third-party analytics are in use. 
+                                This app collects user phone numbers and zip codes and stores them in a database in order to send texts for nearby fires. This data will never be shared with
+                                anyone. To request that your information be removed from the database, reply DELETE ALL or DELETE followed by a zip to the number that you receive texts from.
+                                Any updates about the Privacy Policy will be sent via text to users of the application. This policy is effective as of December 6, 2020. This website will not
+                                change its behavior when it receives a 'Do Not Track' signal from a user's browser, mainly because it does not have any tracking. No third-party analytics are in use.
                             </p>
                     </div>
                 </div>
