Added link to repo in modal

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -82,7 +82,7 @@
                             </ul>
                         <h4>Check me out</h4>
                             <ul>
-                                <li><a href="https://github.com/thepavangollapalli">Github</a></li>
+                                <li><a href="https://github.com/thepavangollapalli/wildfire-text-alerts">Github</a></li>
                                 <li><a href="https://linkedin.com/in/pavangollapalli">Linkedin</a></li>
                             </ul>
                         <h4>Privacy Policy</h4>
