Added new favicon and attribution in modal

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -79,6 +79,7 @@
                                 <li><a href="https://data-nifc.opendata.arcgis.com/datasets/incident-3">Irwin API (hosted by ArcGIS)</li>
                                 <li><a href="https://www.twilio.com/docs">Twilio API</a></li>
                                 <li><a href="https://www.vecteezy.com/free-vector/forest-fire">Forest Fire Vectors by Vecteezy (image by yellowlion120)</a></li>
+                                <li><a href="https://www.vecteezy.com/free-vector/fire">Fire Vectors by Vecteezy (image by monsterjoke)</a></li>
                             </ul>
                         <h4>Check me out</h4>
                             <ul>
